--- a/www/css/index.css
+++ b/www/css/index.css
@@ -174,6 +174,7 @@ h1 {
 .content-listado ons-col .imagen {
     position:relative;
     width: 100%;
+    float:left;
 }
 .content-listado ons-col{
     text-align: center !important;
@@ -214,12 +215,12 @@ h1 {
 
 }
 #main-menu ons-col i{
-   position: absolute;
-    color:#174779;
-    display:table;
-    top:39%;
-    left:50%;
-    transform: translate(-50%,-39%);
+    position: absolute;
+    color: #174779;
+    display: inline-block;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%,-50%);
     font-size:130px;
 }
 @media(max-width: 480px){
