--- a/www/css/index.css
+++ b/www/css/index.css
@@ -211,8 +211,7 @@ h1 {
     left:50%;
     max-width: 75%;
     transform: translate(-50%,-50%);
-
-
+    -webkit-transform: translate(-50%, -50%);
 }
 #main-menu ons-col i{
     position: absolute;
@@ -221,6 +220,7 @@ h1 {
     top: 50%;
     left: 50%;
     transform: translate(-50%,-50%);
+    -webkit-transform: translate(-50%, -50%);
     font-size:130px;
 }
 @media(max-width: 480px){
@@ -278,6 +278,7 @@ ons-select i{
     padding-bottom:15px;
     margin: 0 5px;
     margin-top: 15px;
+
     margin-bottom: 22px;
     background-image: radial-gradient(#b1d7ff, #80bfff);
 }
