cambios de color spinner

--- a/www/css/index.css
+++ b/www/css/index.css
@@ -78,7 +78,7 @@
     font-family: 'Rajdhani-bold' !important;
 }
 .page__content h1{
-    font-size:48px !important;
+    font-size:48px ;
 }
 body {
 
